update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Lectures-on-painting-delivered-at-the-Royal-Academy-by-Henry-Fuseli-PP-b-With-additional-obse__71154
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71154-h/images/cover.jpg
 creator:
   author:
     agent_name: Fuseli, Henry
@@ -16,6 +19,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/40282
     wikipedia: https://en.wikipedia.org/wiki/Henry_Fuseli
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71154#Lectures-on-painting-delivered-at-the-Royal-Academy-by-Henry-Fuseli-PP-b-With-additional-obse_
 gutenberg_issued: '2023-07-09'
 identifiers:
   gutenberg: '71154'
